Use replacement for Class.newInstance().
It is deprecated as of Java 9, and the replacement is valid for older JVMs.